@@ -15,25 +15,21 @@
  */
 package org.kaazing.gateway.service.proxy;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static java.util.stream.Collectors.joining;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
-import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.InetSocketAddress;
-import java.net.MalformedURLException;
 import java.net.ServerSocket;
 import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
-import java.net.URLConnection;
-import java.net.URLStreamHandler;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Enumeration;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
@@ -45,6 +41,7 @@ import org.junit.rules.RuleChain;
 import org.kaazing.gateway.server.test.GatewayRule;
 import org.kaazing.gateway.server.test.config.GatewayConfiguration;
 import org.kaazing.gateway.server.test.config.builder.GatewayConfigurationBuilder;
+import org.kaazing.netx.URLConnectionHelper;
 import org.kaazing.test.util.ITUtil;
 
 public class ProxyServiceExtensionTest {
@@ -111,7 +108,7 @@ public class ProxyServiceExtensionTest {
             fail("Unexpected exception in client connecting to server: " + ex);
         }
 
-        Thread.currentThread().setContextClassLoader(new ProxyServiceExtensionIT.TestClassLoader());
+        Thread.currentThread().setContextClassLoader(new TestClassLoader());
 
     }
 
@@ -120,45 +117,23 @@ public class ProxyServiceExtensionTest {
      * method will return a URL whose contents will be the list of class names supplied in the constructor.
      * This avoids the need for test meta-info resources files to be available on the test class path.
      */
-    static class TestClassLoader extends ClassLoader {
-        private URL url;
+    private static class TestClassLoader extends ClassLoader {
+        private final List<URL> urls;
 
-        TestClassLoader(String... factorySpiClassNames) throws MalformedURLException {
-            url = new URL(null, "data:metainf", new TestURLStreamHandler(factorySpiClassNames));
+        TestClassLoader(String... factorySpiClassNames) throws IOException {
+            URLConnectionHelper helper = URLConnectionHelper.newInstance();
+            String contents = Arrays.stream(factorySpiClassNames).collect(joining("\n"));
+            URI uri = URI.create("data:," + contents);
+            URL url = helper.toURL(uri);
+            urls = Collections.singletonList(url);
         }
 
         @Override
         public Enumeration<URL> getResources(String name) throws IOException {
             if (name.equals("META-INF/services/" + ProxyServiceExtensionSpi.class.getName())) {
-                return Collections.enumeration(Collections.singletonList(url));
+                return Collections.enumeration(urls);
             }
             return super.getResources(name);
-        }
-
-    }
-
-    private static class TestURLStreamHandler extends URLStreamHandler {
-        private final byte[] contents;
-
-        TestURLStreamHandler(String[] factorySpiClassNames) {
-            String metaInfContent = Arrays.stream(factorySpiClassNames).collect(joining("\n"));
-            contents = metaInfContent.getBytes(UTF_8);
-        }
-
-        @Override
-        protected URLConnection openConnection(URL u) throws IOException {
-            return new URLConnection(u) {
-
-                @Override
-                public void connect() throws IOException {
-                }
-
-                @Override
-                public InputStream getInputStream() {
-                    return new ByteArrayInputStream(contents);
-                }
-
-            };
         }
 
     }
